[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/units/enemy_base_tank].png" type="Texture" id=1]
[ext_resource path="res://assets/units/enemy_gun_tank.png" type="Texture" id=2]
[ext_resource path="res://weapons/GunHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy_units/AI.tscn" type="PackedScene" id=4]
[ext_resource path="res://units_assets/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy_units/EnemyTank.gd" type="Script" id=6]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.3495, 17.2406 )

[node name="EnemyTank" type="KinematicBody2D" groups=[
"enemy_units",
]]
collision_layer = 2
collision_mask = 29
script = ExtResource( 6 )
Bullet = ExtResource( 7 )
initial_health = 300
gun_cooldown = 20.0
initial_damage = 20
bullet_speed = 2

[node name="SpriteManager" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="TankBase" type="Sprite" parent="SpriteManager"]
position = Vector2( -0.33371, 0.166855 )
texture = ExtResource( 1 )

[node name="TankTop" type="Sprite" parent="SpriteManager"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.166855, 0 )
shape = SubResource( 1 )

[node name="GunHandler" parent="." instance=ExtResource( 3 )]
position = Vector2( 25.8399, 0 )

[node name="Health" parent="." instance=ExtResource( 5 )]

[node name="AI" parent="." instance=ExtResource( 4 )]
[connection signal="dead" from="Health" to="." method="_on_Health_dead"]
[connection signal="look" from="AI" to="." method="_on_AI_look"]
[connection signal="shoot" from="AI" to="." method="_on_AI_shoot"]
